<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="actividad14.unidad3.inacap.cl.proyectoversiones.ListaClientesActivity"
    android:background="@drawable/sky_with_clouds_page">

    <LinearLayout
        android:id="@+id/Usuarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/titulo_clientes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cliente_nuevo"
                android:id="@+id/cmdNuevo"
                android:background="@drawable/naranjo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cliente_eliminar"
                android:id="@+id/cmdEliminar"
                android:background="@drawable/naranjo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cliente_modificar"
                android:id="@+id/cmdModificar"
                android:background="@drawable/naranjo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_volver"
                android:id="@+id/cmdVolver"
                android:background="@drawable/naranjo" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
