<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="actividad14.unidad3.inacap.cl.proyectoversiones.ResumenDeCajaActivity"
    android:background="@drawable/sky_with_clouds_page">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <GridView
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:id="@+id/gvResumenDeCaja"
            android:layout_gravity="center_horizontal"
            android:numColumns="2"
            android:background="@color/accent_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_verificar_entrega"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_seleccione_entrega"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spEntregas"
            android:layout_gravity="center_horizontal"
            android:background="@color/accent_material_light" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_verificar"
            android:id="@+id/cmdVerificar"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/naranjo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_volver"
            android:id="@+id/cmdVolver3"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/naranjo" />
    </LinearLayout>

</RelativeLayout>
