<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    tools:context="actividad14.unidad3.inacap.cl.proyectoversiones.ModificarClienteActivity"
    android:background="@drawable/sky_with_clouds_page">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/titulo_cliente_modificar"
                    android:id="@+id/textView5"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="ID Cliente"
                    android:id="@+id/textView6"
                    android:layout_column="0"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="ID"
                    android:id="@+id/txtIdClienteModificar"
                    android:layout_column="2"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nombre_cliente"
                    android:id="@+id/textView7"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNombreClienteModificar"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/direccion_cliente"
                    android:id="@+id/textView8"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDireccionClienteModificar"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/telefono_cliente"
                    android:id="@+id/textView9"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTelefonoClienteModificar"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_modificar_cliente"
            android:id="@+id/cmdModificarCliente"
            android:layout_column="0"
            android:width="150px"
            android:background="@drawable/naranjo" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_cancelar"
            android:id="@+id/cmdCancelarModificar"
            android:layout_column="0"
            android:width="150px"
            android:background="@drawable/naranjo" />
    </LinearLayout>

</RelativeLayout>
